<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1900dp"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="412dp"
                android:layout_height="105dp"

                android:gravity="center"
                android:rotationX="0"
                android:text="@string/_10_letter_b_animals_infomation"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Baboon"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Baboon"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="534dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/baboon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BactrianCamel"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/BactrianCamel"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="418dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bacterialcamel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Badger"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Badger"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="545dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/badger" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Balinese"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Balinese"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="520dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/balinese" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BandedPalmCivet"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/BandedPalmCivet"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="347dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bandedpalmcivet" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Bandicoot"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Bandicoot"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="500dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bandicoot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Baiji"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Baiji"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="630dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/baiji" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BanjoCatfish"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/BanjoCatfish"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="460dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/banjocatfish" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Barb"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Barb"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="606dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/barbimage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BarnOwl"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:gravity="center_horizontal"
                    android:text="@string/BarnOwl"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="515dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/barnowlimage" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>